# PE-Chat-App

./: .gitignore  README  alembic.ini  config.py  docker-compose.yml  kill_all_on_port.sh  main.py  pyproject.toml
.github/workflows/: flake8.yaml  isort.yaml  mypy.yaml  pylint.yaml
alembic/: env.py
alembic/versions/: 2022_12_29_1327-7278187767df_first_migration.py
application/: __init__.py  config.py  views.py
application/static/: index.js
application/templates/: base.html  chat.html  index.html  login.html  register.html
application/tools/: login_tools.py  message_uploader.py  registration_tools.py
db/: messages.py  user.py  utils.py
static/: index.js
templates/: index.html
