[tool.poetry]
name = "pe-chat-app"
version = "0.1.0"
description = ""
authors = ["Aran Borkum <aranborkum@hotmail.com>"]
readme = "README.md"
packages = [{include = "pe_chat_app"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
flask-socketio = "^5.3.2"
alembic = "^1.9.1"
python-dotenv = "^0.21.0"
config-py = "^0.1.1"
psycopg2 = "^2.9.5"
black = "^22.12.0"
flask-login = "^0.6.2"
isort = "^5.11.4"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
