[tool.poetry]
name = "pe-chat-app"
version = "0.1.0"
description = ""
authors = ["Aran Borkum <aranborkum@hotmail.com>"]
readme = "README.md"
packages = [{include = "pe_chat_app"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
flask-socketio = "^5.3.2"
alembic = "^1.9.1"
python-dotenv = "^0.21.0"
config-py = "^0.1.1"
psycopg2 = "^2.9.5"
black = "^22.12.0"
flask-login = "^0.6.2"
pylint = "^2.15.9"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
exclude = [
    "alembic"
]
plugins = [
    'sqlalchemy.ext.mypy.plugin'
]


[tool.flake8]
ignore = ['W503', 'E203']
max-line-length = 88
count = true
exclude = ['.venv']


[tool.pylint]
disable = [
    'R0903', # too-few-public-methods
    'R0901', # too-many-ancestors
]


[tool.isort]
profile = "black"
src_paths = ["application", "db", "alembic"]
filter_files = true